--- a/work/mobonAI/source/html/0_modal/modal_ai.html
+++ b/work/mobonAI/source/html/0_modal/modal_ai.html
@@ -22,6 +22,7 @@
 </head>
 <script>
     // text 효과
+    // 개발진행 참고소스
     document.addEventListener("DOMContentLoaded", function () {
         const text = "안녕하세요. 가칭미디어 홍길동입니다.아래 내역으로 제안 요청 드립니다. 글자 이벤트 테스트 입니다. 타자 효과!";
         const typingEl = document.querySelector(".txtEffect");
